--- a/Example/ToastFancy/Base.lproj/Main.storyboard
+++ b/Example/ToastFancy/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,13 +16,61 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="7SW-dT-j17">
+                                <rect key="frame" x="38" y="432.5" width="338" height="32"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <segments>
+                                    <segment title="TOP"/>
+                                    <segment title="MID"/>
+                                    <segment title="BOTTOM"/>
+                                </segments>
+                                <color key="selectedSegmentTintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                <connections>
+                                    <action selector="segment:" destination="vXZ-lx-hvc" eventType="valueChanged" id="qsi-6D-jq0"/>
+                                </connections>
+                            </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5d8-lq-mOI">
+                                <rect key="frame" x="188" y="516.5" width="38" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="mQQ-UK-rO6"/>
+                                    <constraint firstAttribute="width" constant="38" id="xP3-EH-jEB"/>
+                                </constraints>
+                                <state key="normal" title="Toast"/>
+                                <connections>
+                                    <action selector="toast:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="bwS-jQ-lxF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x1X-xS-ueG">
+                                <rect key="frame" x="147.5" y="478.5" width="119" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="119" id="cxM-zn-Rfu"/>
+                                    <constraint firstAttribute="height" constant="30" id="fh3-Nf-Moj"/>
+                                </constraints>
+                                <state key="normal" title="Toast With Image"/>
+                                <connections>
+                                    <action selector="toastWithImage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="ejQ-XW-MV3"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7SW-dT-j17" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="1RP-gv-shB"/>
+                            <constraint firstItem="7SW-dT-j17" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="BkP-Kz-gvD"/>
+                            <constraint firstItem="5d8-lq-mOI" firstAttribute="top" secondItem="x1X-xS-ueG" secondAttribute="bottom" constant="8" id="Ee3-yJ-O1H"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7SW-dT-j17" secondAttribute="trailing" constant="18" id="IEH-6S-Ryw"/>
+                            <constraint firstItem="7SW-dT-j17" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="18" id="LWp-SF-NuB"/>
+                            <constraint firstItem="5d8-lq-mOI" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="f9b-Zr-UrC"/>
+                            <constraint firstItem="x1X-xS-ueG" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="pif-KS-rrR"/>
+                            <constraint firstItem="x1X-xS-ueG" firstAttribute="top" secondItem="7SW-dT-j17" secondAttribute="bottom" constant="15" id="u1k-RW-cmb"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="133.92857142857142"/>
         </scene>
     </scenes>
 </document>
